# 3d-dava

./: README.md  environment.yml  pyproject.toml  setup.py
3D_DaVa/: __main__.py  alignment.py  inout.py  io.py  processing.py
Test_CAD/: create_simple_geometries.py  distort.py
